Pequeña actualizacion de la ventana de platos, añadidos titulos. Añadido iframe responsive. Ademas de algunos comentarios

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -52,54 +52,68 @@
                 <div class="card carta">
                     <img class="card-img-top" src="../img/ramen1.jpeg" alt="Card image cap">
                     <div class="card-body">
+                        <p style="text-align: center;">HAKATA RAMEN</p>
                         <p style="text-align: center;" class="card-text">
-                            Ramen elaborado a base de pollo, algas, huevo y nuestra salsa secreta con un toque picante. </p>
-                            <P style="text-align: center;">P.V.P 10€</P>
+                            Ramen elaborado a base de pollo, algas, huevo y nuestra salsa secreta con un toque picante.
+                        </p>
+                        <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
                 <div class="card carta">
                     <img class="card-img-top" src="../img/ramen2.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <p style="text-align: center;" class="card-text">Ramen elaborado a base de pollo marinado, diferentes verduras, huevo y salsa dulce.</p>
+                        <p style="text-align: center;">KIOTO RAMEN</p>
+                        <p style="text-align: center;" class="card-text">Ramen elaborado a base de pollo marinado,
+                            diferentes verduras, huevo y salsa dulce.</p>
                         <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
                 <div class="card carta">
                     <img class="card-img-top" src="../img/ramen3.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <p style="text-align: center;" class="card-text">Ramen elaborado al estilo tradicional con caldo, ternera, verdura y un toque salado.</p>
+                        <p style="text-align: center;">TOKIO RAMEN</p>
+                        <p style="text-align: center;" class="card-text">Ramen elaborado al estilo tradicional con
+                            caldo, ternera, verdura y un toque salado.</p>
                         <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
                 <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen4.jpg" alt="Card image cap"  >
+                    <img class="card-img-top" src="../img/ramen4.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <p style="text-align: center;" class="card-text">Ramen elaborado con pollo, especias y verduras muy picantes. Para verdaderos amantes del picante.</p>
+                        <p style="text-align: center;">MURORAN RAMEN</p>
+                        <p style="text-align: center;" class="card-text">Ramen elaborado con pollo, especias y verduras
+                            muy picantes. Para verdaderos amantes del picante.</p>
                         <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
                 <div class="card carta">
                     <img class="card-img-top" src="../img/ramen5.jpeg" alt="Card image cap">
                     <div class="card-body">
-                        <p style="text-align: center;" class="card-text">Ramen clasico. Pollo, verduras y sopa. Si no quieres jugartela, este es el tuyo.</p>
+                        <p style="text-align: center;">SAPPORO RAMEN</p>
+                        <p style="text-align: center;" class="card-text">Ramen clasico. Pollo, verduras y sopa. Si no
+                            quieres jugartela, este es el tuyo.</p>
                         <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
                 <div class="card carta">
                     <img class="card-img-top" src="../img/ramen6.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <p style="text-align: center;" class="card-text">Ramen de pescado, verduras y salsa de la casa.</p>
+                        <p style="text-align: center;">TSUKEMEN RAMEN</p>
+                        <p style="text-align: center;" class="card-text">Ramen de pescado, verduras y salsa de la casa.
+                        </p>
                         <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
                 <div class="card carta">
                     <img class="card-img-top" src="../img/ramen7.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <p style="text-align: center;" class="card-text">Ramen tradicional mixto, carne y pescado se fusionan junto a nuestra salsa secreta. Perfecto para los indecisos.</p>
+                        <p style="text-align: center;">SHIO RAMEN</p>
+                        <p style="text-align: center;" class="card-text">Ramen tradicional mixto, carne y pescado se
+                            fusionan junto a nuestra salsa secreta. Perfecto para los indecisos.</p>
                         <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
-                
+
             </div>
 
         </div>
