--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -57,8 +57,6 @@
                     <hr>
                 </div>
             </div>
-
-
         </div>
 
         <div class="row row3">
@@ -70,11 +68,11 @@
                             <label for="disabledTextInput" class="form-label">Nombre</label>
                             <input type="text" id="TextInput" class="form-control inputform" placeholder="Nombre">
                             <label for="disabledTextInput" class="form-label ">Apellido</label>
-                            <input type="text" id="TextInput" class="form-control inputform" placeholder="Nombre">
+                            <input type="text" id="TextInput" class="form-control inputform" placeholder="Apellido">
                             <label for="disabledTextInput" class="form-label">Email</label>
-                            <input type="text" id="TextInput" class="form-control inputform" placeholder="Nombre">
+                            <input type="text" id="TextInput" class="form-control inputform" placeholder="Email">
                             <label for="disabledTextInput" class="form-label">Telefono</label>
-                            <input type="text" id="TextInput" class="form-control inputform" placeholder="Nombre">
+                            <input type="text" id="TextInput" class="form-control inputform" placeholder="Telefono">
                         </div>
                         <button type="submit" class="btn btn-primary">Enviar</button>
                         <hr>
@@ -82,23 +80,26 @@
                 </form>
             </div>
         </div>
+        <!-- Div del iframe del mapa del restaurante -->
         <div class="row row4">
-            <div class="col col-lg-12 col4">
+            <div class="col col-lg-12 col4 text-center">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7225.889807234104!2d-3.6965393520430117!3d40.40636031055113!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422997800a3c81%3A0xc436dec1618c2269!2sMadrid!5e0!3m2!1ses!2ses!4v1675015400613!5m2!1ses!2ses"
-                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10216.757968963424!2d-3.7095943461256193!3d40.42080498956751!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422997800a3c81%3A0xc436dec1618c2269!2sMadrid!5e0!3m2!1ses!2ses!4v1675066621865!5m2!1ses!2ses"
+                    width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
 
-
+         <!-- Row y column de la parte inferior de la pagina, parte de Redes Sociales -->
+         <div class="row row5 text-center">
+            <div class="col col5">
+                <p>SÍGUENOS EN NUESTRAS REDES</p>
+                <button type="button" class="btn btn-outline-secondary "><i class="bi bi-twitter"></i> Twitter</button>
+                <button type="button" class="btn btn-outline-secondary"><i class="bi bi-instagram"></i>
+                    Instagram</button>
+            </div>
+        </div>
     </div>
-
-
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
