--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/stylesContacto.css">
+    <link rel="stylesheet" href="../css/stylesGeneral.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>Contacto</title>
 </head>
@@ -64,7 +65,7 @@
             <div class="col col3">
                 <form>
                     <fieldset>
-                        <legend>Formulario de Contacto</legend>
+                        <legend style="font-weight: bold;">Formulario de Contacto</legend>
                         <div class="mb-3">
                             <label for="disabledTextInput" class="form-label">Nombre</label>
                             <input type="text" id="TextInput" class="form-control inputform" placeholder="Nombre">
