Readme estructurado y finalizado. Falta unicamente añadir screenshots de las ventanas

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div class="col col3">
                 <p>SÍGUENOS EN NUESTRAS REDES</p>
                 <button type="button" class="btn btn-outline-secondary "><i class="bi bi-twitter"></i> Twitter</button>
-                <button type="button" class="btn btn-outline-secondary"><i class="bi bi-instagram"></i>
-                    Instagram</button>
+                <button type="button" class="btn btn-outline-secondary"><i
+                        class="bi bi-instagram"></i>Instagram</button>
             </div>
         </div>
     </div>
@@ -72,6 +72,5 @@
         crossorigin="anonymous"></script>
 
 </body>
-
 
 </html>
