--- a/pages/carta.html
+++ b/pages/carta.html
@@ -52,18 +52,18 @@
             <div class="col cartas">
                 <!-- Plato 1 -->
                 <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen1.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="../img/ramen1.jpeg" alt="Plato 1">
                     <div class="card-body">
                         <p style="text-align: center;">HAKATA RAMEN</p>
                         <p style="text-align: center;" class="card-text">
-                            Ramen elaborado a base de pollo, algas, huevo y nuestra salsa secreta con un toque picante.
+                            Ramen elaborado a base de pollo, algas, huevo y nuestra salsa secreta con un toque agridulce.
                         </p>
                         <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
                 <!-- Plato 2 -->
                 <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen2.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="../img/ramen2.jpg" alt="Plato 2">
                     <div class="card-body">
                         <p style="text-align: center;">KIOTO RAMEN</p>
                         <p style="text-align: center;" class="card-text">Ramen elaborado a base de pollo marinado,
@@ -73,7 +73,7 @@
                 </div>
                 <!-- Plato 3 -->
                 <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen3.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="../img/ramen3.jpg" alt="Plato 3">
                     <div class="card-body">
                         <p style="text-align: center;">TOKIO RAMEN</p>
                         <p style="text-align: center;" class="card-text">Ramen elaborado al estilo tradicional con
@@ -83,7 +83,7 @@
                 </div>
                 <!-- Plato 4 -->
                 <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen4.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="../img/ramen4.jpg" alt="Plato 4">
                     <div class="card-body">
                         <p style="text-align: center;">MURORAN RAMEN</p>
                         <p style="text-align: center;" class="card-text">Ramen elaborado con pollo, especias y verduras
@@ -93,7 +93,7 @@
                 </div>
                 <!-- Plato 5 -->
                 <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen5.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="../img/ramen5.jpeg" alt="Plato 5">
                     <div class="card-body">
                         <p style="text-align: center;">SAPPORO RAMEN</p>
                         <p style="text-align: center;" class="card-text">Ramen clasico. Pollo, verduras y sopa. Si no
@@ -103,7 +103,7 @@
                 </div>
                 <!-- Plato 6 -->
                 <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen6.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="../img/ramen6.jpg" alt="Plato 6">
                     <div class="card-body">
                         <p style="text-align: center;">TSUKEMEN RAMEN</p>
                         <p style="text-align: center;" class="card-text">Ramen de pescado, verduras y salsa de la casa.
@@ -113,7 +113,7 @@
                 </div>
                 <!-- Plato 7 -->
                 <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen7.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="../img/ramen7.jpg" alt="Plato 7">
                     <div class="card-body">
                         <p style="text-align: center;">SHIO RAMEN</p>
                         <p style="text-align: center;" class="card-text">Ramen tradicional mixto, carne y pescado se
