Estilo del boton del formulario cambiado

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -50,11 +50,10 @@
         <div class="row row2">
             <div class="col col2">
                 <div class="info">
-                    <p style="font-weight: bold;">CONTÁCTENOS</p>
-                    <p>Llámenos al 965783452</p>
+                    <p style="font-weight: bold; font-size: x-large;">CONTÁCTENOS</p>
+                    <p style="font-weight: bold;">Llámenos al 965783452</p>
                     <p>Horario:
-                        Lunes a Viernes 9:00 a 23:00h
-                        Sabado y Domingo 8:30 a 1:00h
+                        Lunes a Viernes 9:00 a 23:00h - Sabado y Domingo 8:30 a 1:00h
                     </p>
                     <hr>
                 </div>
@@ -76,7 +75,7 @@
                             <label for="disabledTextInput" class="form-label">Telefono</label>
                             <input type="text" id="TextInput" class="form-control inputform" placeholder="Telefono">
                         </div>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
+                        <button type="submit" class="btn btn-primary boton">Enviar</button>
                         <hr>
                     </fieldset>
                 </form>
