Añadido un plato mas y cambiado el formato para PC de la ventana menu

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -49,76 +49,103 @@
         </div>
         <!-- Contenedor de las tarjetas de los platos -->
         <div class="row row2">
-            <div class="col cartas">
+            <div class="col-12 cartas">
                 <!-- Plato 1 -->
-                <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen1.jpeg" alt="Plato 1">
-                    <div class="card-body">
-                        <p style="text-align: center;">HAKATA RAMEN</p>
-                        <p style="text-align: center;" class="card-text">
-                            Ramen elaborado a base de pollo, algas, huevo y nuestra salsa secreta con un toque agridulce.
-                        </p>
-                        <P style="text-align: center;">P.V.P 10€</P>
+                <div class="col-lg-6 ">
+                    <div class="card carta">
+                        <img class="card-img-top" src="../img/ramen1.jpeg" alt="Plato 1">
+                        <div class="card-body">
+                            <p class="negrita" style="text-align: center;">HAKATA RAMEN</p>
+                            <p style="text-align: center;" class="card-text">
+                                Ramen elaborado a base de pollo, algas, huevo y nuestra salsa secreta con un toque
+                                agridulce.
+                            </p>
+                            <P style="text-align: center;">P.V.P 10€</P>
+                        </div>
                     </div>
                 </div>
                 <!-- Plato 2 -->
-                <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen2.jpg" alt="Plato 2">
-                    <div class="card-body">
-                        <p style="text-align: center;">KIOTO RAMEN</p>
-                        <p style="text-align: center;" class="card-text">Ramen elaborado a base de pollo marinado,
-                            diferentes verduras, huevo y salsa dulce.</p>
-                        <P style="text-align: center;">P.V.P 10€</P>
+                <div class="col-lg-6">
+                    <div class="card carta">
+                        <img class="card-img-top" src="../img/ramen2.jpg" alt="Plato 2">
+                        <div class="card-body">
+                            <p class="negrita" style="text-align: center;">KIOTO RAMEN</p>
+                            <p style="text-align: center;" class="card-text">Ramen elaborado a base de pollo marinado,
+                                diferentes verduras, huevo y salsa dulce.</p>
+                            <P style="text-align: center;">P.V.P 10€</P>
+                        </div>
                     </div>
                 </div>
                 <!-- Plato 3 -->
-                <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen3.jpg" alt="Plato 3">
-                    <div class="card-body">
-                        <p style="text-align: center;">TOKIO RAMEN</p>
-                        <p style="text-align: center;" class="card-text">Ramen elaborado al estilo tradicional con
-                            caldo, ternera, verdura y un toque salado.</p>
-                        <P style="text-align: center;">P.V.P 10€</P>
+                <div class="col-lg-6">
+                    <div class="card carta">
+                        <img class="card-img-top" src="../img/ramen3.jpg" alt="Plato 3">
+                        <div class="card-body">
+                            <p class="negrita" style="text-align: center;">TOKIO RAMEN</p>
+                            <p style="text-align: center;" class="card-text">Ramen elaborado al estilo tradicional con
+                                caldo, ternera, verdura y un toque salado.</p>
+                            <P style="text-align: center;">P.V.P 10€</P>
+                        </div>
                     </div>
                 </div>
                 <!-- Plato 4 -->
-                <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen4.jpg" alt="Plato 4">
-                    <div class="card-body">
-                        <p style="text-align: center;">MURORAN RAMEN</p>
-                        <p style="text-align: center;" class="card-text">Ramen elaborado con pollo, especias y verduras
-                            muy picantes. Para verdaderos amantes del picante.</p>
-                        <P style="text-align: center;">P.V.P 10€</P>
+                <div class="col-lg-6">
+                    <div class="card carta">
+                        <img class="card-img-top" src="../img/ramen4.jpg" alt="Plato 4">
+                        <div class="card-body">
+                            <p class="negrita" style="text-align: center;">MURORAN RAMEN</p>
+                            <p style="text-align: center;" class="card-text">Ramen elaborado con pollo, especias y
+                                verduras
+                                muy picantes.</p>
+                            <P style="text-align: center;">P.V.P 10€</P>
+                        </div>
                     </div>
                 </div>
                 <!-- Plato 5 -->
-                <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen5.jpeg" alt="Plato 5">
-                    <div class="card-body">
-                        <p style="text-align: center;">SAPPORO RAMEN</p>
-                        <p style="text-align: center;" class="card-text">Ramen clasico. Pollo, verduras y sopa. Si no
-                            quieres jugartela, este es el tuyo.</p>
-                        <P style="text-align: center;">P.V.P 10€</P>
+                <div class="col-lg-6">
+                    <div class="card carta">
+                        <img class="card-img-top" src="../img/ramen5.jpeg" alt="Plato 5">
+                        <div class="card-body">
+                            <p class="negrita" style="text-align: center;">SAPPORO RAMEN</p>
+                            <p style="text-align: center;" class="card-text">Ramen clasico. Pollo, verduras y sopa.</p>
+                            <P style="text-align: center;">P.V.P 10€</P>
+                        </div>
                     </div>
                 </div>
                 <!-- Plato 6 -->
-                <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen6.jpg" alt="Plato 6">
-                    <div class="card-body">
-                        <p style="text-align: center;">TSUKEMEN RAMEN</p>
-                        <p style="text-align: center;" class="card-text">Ramen de pescado, verduras y salsa de la casa.
-                        </p>
-                        <P style="text-align: center;">P.V.P 10€</P>
+                <div class="col-lg-6">
+                    <div class="card carta">
+                        <img class="card-img-top" src="../img/ramen6.jpg" alt="Plato 6">
+                        <div class="card-body">
+                            <p class="negrita" style="text-align: center;">TSUKEMEN RAMEN</p>
+                            <p style="text-align: center;" class="card-text">Ramen de pescado, verduras y salsa de la
+                                casa.
+                            </p>
+                            <P style="text-align: center;">P.V.P 10€</P>
+                        </div>
                     </div>
                 </div>
                 <!-- Plato 7 -->
-                <div class="card carta">
-                    <img class="card-img-top" src="../img/ramen7.jpg" alt="Plato 7">
-                    <div class="card-body">
-                        <p style="text-align: center;">SHIO RAMEN</p>
-                        <p style="text-align: center;" class="card-text">Ramen tradicional mixto, carne y pescado se
-                            fusionan junto a nuestra salsa secreta. Perfecto para los indecisos.</p>
-                        <P style="text-align: center;">P.V.P 10€</P>
+                <div class="col-lg-6">
+                    <div class="card carta">
+                        <img class="card-img-top" src="../img/ramen7.jpg" alt="Plato 7">
+                        <div class="card-body">
+                            <p class="negrita" style="text-align: center;">SHIO RAMEN</p>
+                            <p style="text-align: center;" class="card-text">Ramen tradicional mixto, carne y pescado se
+                                fusionan junto a nuestra salsa secreta.</p>
+                            <P style="text-align: center;">P.V.P 10€</P>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card carta">
+                        <img class="card-img-top" src="../img/ramen8.jpg" alt="Plato 8">
+                        <div class="card-body">
+                            <p class="negrita" style="text-align: center;">ASSARI  RAMEN</p>
+                            <p style="text-align: center;" class="card-text">Ramen tradicional mixto, carne y pescado se
+                                fusionan junto a nuestra salsa secreta.</p>
+                            <P style="text-align: center;">P.V.P 10€</P>
+                        </div>
                     </div>
                 </div>
             </div>
