Pequeño cambio en descripción de un plato. Proyecto finalizado 30-01-2023

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -142,8 +142,7 @@
                         <img class="card-img-top" src="../img/ramen8.jpg" alt="Plato 8">
                         <div class="card-body">
                             <p class="negrita" style="text-align: center;">ASSARI  RAMEN</p>
-                            <p style="text-align: center;" class="card-text">Ramen tradicional mixto, carne y pescado se
-                                fusionan junto a nuestra salsa secreta.</p>
+                            <p style="text-align: center;" class="card-text">Ramen creado con receta secreta. No hay más detalles ;)</p>
                             <P style="text-align: center;">P.V.P 10€</P>
                         </div>
                     </div>
